--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,25 @@
+[workspace]
+resolver = "2"
+exclude = ["tests/test_exercises", "dev"]
+
+[workspace.package]
+version = "0.1.1"
+edition = "2021"
+authors = ["berlin"]
+repository = "https://github.com/Esuol/rust_exer.git"
+license = "MIT"
+rust-version = "1.70"
+
+[workspace.dependencies]
+serde = { version = "1.0", features = ["derive"] }
+toml_edit = { version = "0.22", default-features = false, features = [
+  "parse",
+  "serde",
+] }
+
 [package]
 name = "rust-exer"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
