--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 exclude = ["tests/test_exercises", "dev"]
+members = ["exercises/rectangles"]
 
 [workspace.package]
 version = "0.1.1"
