--- a/utils/rust-image-processor/Cargo.toml
+++ b/utils/rust-image-processor/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
 name = "rust-image-processor"
-version.workspace = true
-edition.workspace = true
-authors.workspace = true
-repository.workspace = true
-license.workspace = true
-rust-version.workspace = true
+version = "0.1.0"
+edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["cdylib"]
 
 [dependencies]
+napi = { version = "3.2.4", default-features = false, features = ["napi8"] }
+napi-derive = "3.2.4"
+
+[build-dependencies]
+napi-build = "2.1"
