--- a/web/api-gateway/Cargo.toml
+++ b/web/api-gateway/Cargo.toml
@@ -8,3 +8,6 @@ license.workspace = true
 rust-version.workspace = true
 
 [dependencies]
+rocket = { version = "0.5", features = ["json"] }
+tokio = { version = "1.0", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
