--- a/web/api-gateway/Cargo.toml
+++ b/web/api-gateway/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
 name = "api-gateway"
-version.workspace = true
-edition.workspace = true
-authors.workspace = true
-repository.workspace = true
-license.workspace = true
-rust-version.workspace = true
+version = "0.1.1"
+edition = "2021"
+authors = ["berlin"]
+repository = "https://github.com/Esuol/rust_exer.git"
+license = "MIT"
+rust-version = "1.70"
 
 [dependencies]
 rocket = { version = "0.5", features = ["json"] }
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
+reqwest = { version = "0.12", features = ["json"] }
