--- a/web/api-gateway/Cargo.toml
+++ b/web/api-gateway/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "1.0", features = ["derive"] }
 reqwest = { version = "0.12", features = ["json"] }
 sysinfo = "0.37"                                    # 获取内存、CPU、网络等系统信息
 chrono = { version = "0.4", features = ["serde"] }  # 时间处理
+config = "0.15.15"
