--- a/web/api-gateway/Cargo.toml
+++ b/web/api-gateway/Cargo.toml
@@ -15,3 +15,5 @@ reqwest = { version = "0.12", features = ["json"] }
 sysinfo = "0.37"                                    # 获取内存、CPU、网络等系统信息
 chrono = { version = "0.4", features = ["serde"] }  # 时间处理
 config = "0.15.15"
+log = "0.4"
+env_logger = "0.11.6"
