feat(gateway): 动态路由配置框架

--- a/web/api-gateway/config/default.toml
+++ b/web/api-gateway/config/default.toml
@@ -7,22 +7,8 @@ max_connections = 10000
 [logging]
 level = "info"
 format = "json"
-file_path = "logs/api-gateway.log"
 
-[[routes]]
-path = "/api/v1/users"
-method = "GET"
-upstream = "http://user-service:8080"
-timeout = 30
-
-[[routes]]
-path = "/api/v1/products"
-method = "GET|POST"
-upstream = "http://product-service:8080"
-timeout = 30
-
-[[routes]]
-path = "/api/v1/orders"
-method = "*"
-upstream = "http://order-service:8080"
-timeout = 60
+[routes]
+routes = [
+  { path = "/api/test", method = "GET", upstream = "http://httpbin.org/json", timeout = 30 },
+]
